ts and tailwind config

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,45 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+.temp-eslintcache
+
+.eslintcache
+
+.cache
+
+tmp/
+
+debug/
+
+.idea
+
+jsdoc/
+
+versions.json
+
+*.iml
+
+npm-debug.log
+
+/packages/**/node_modules
+
+/tools/internal-rules/node_modules
+
+/.vscode
+
+.sublimelinterrc
+
+.eslint-release-info.json
+
+.nyc_output
+
+/test-results.xml
+
+.temp-eslintcache
+
+/tests/fixtures/autofix-integration/temp.js
+
+yarn.lock
+
+package-lock.json
