--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "next": "10.0.3",
+    "next-seo": "^4.17.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "sharp": "^0.26.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
@@ -24,6 +26,7 @@
     "autoprefixer": "^10.0.4",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
@@ -32,7 +35,6 @@
     "lint-staged": "^10.5.2",
     "postcss": "^8.1.10",
     "postcss-import": "^13.0.0",
-    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "tailwindcss": "^2.0.1",
     "typescript": "^4.1.2"
