--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "format": "prettier --write . --config ./.prettierrc"
   },
   "dependencies": {
+    "immutability-helper": "^3.1.1",
+    "js-cookie": "^2.2.1",
     "next": "10.0.3",
     "next-seo": "^4.17.0",
     "react": "17.0.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "17.0.1",
     "sharp": "^0.26.3"
   },
