--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write . --config ./.prettierrc"
   },
   "dependencies": {
+    "dnd-core": "^11.1.3",
     "immutability-helper": "^3.1.1",
     "js-cookie": "^2.2.1",
     "next": "10.0.3",
