--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
     "format": "prettier --write . --config ./.prettierrc"
   },
   "dependencies": {
-    "dnd-core": "^11.1.3",
     "immutability-helper": "^3.1.1",
     "js-cookie": "^2.2.1",
     "next": "10.0.3",
     "next-seo": "^4.17.0",
     "react": "17.0.1",
-    "react-dnd": "^11.1.3",
-    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "17.0.1",
-    "sharp": "^0.26.3"
+    "react-sortablejs": "^6.0.0",
+    "sharp": "^0.26.3",
+    "sortablejs": "^1.12.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/sortablejs": "^1.10.6",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "autoprefixer": "^10.0.4",
